<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".Activity.MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMathSymbolRecognizer"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/math_symbol_recognizer"
        android:textColor="@color/off_white"
        app:layout_constraintEnd_toEndOf="@+id/textViewMainActivityTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewMainActivityTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainActivityTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEquationRecognizer"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/equation_recognizer"
        android:textColor="@color/off_white"
        app:layout_constraintEnd_toEndOf="@+id/textViewMainActivityTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewMainActivityTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainActivityTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDollarN"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/dollar_n_recognizer"
        android:textColor="@color/off_white"
        app:layout_constraintEnd_toEndOf="@+id/textViewMainActivityTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewMainActivityTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainActivityTitle" />

    <TextView
        android:id="@+id/textViewMainActivityTitle"
        android:layout_width="341dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/gesture_recognizer"
        android:textColor="@color/off_white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="548dp"
        android:text="@string/built_by_abdul_samadh_azath"
        android:textColor="@color/off_white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewMainActivityTitle"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/textViewMainActivityTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainActivityTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>